<resources>
    <string name="app_name">Anakos app</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">140684883206054</string>
    <string name="fb_login_protocol_scheme">fb140684883206054</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>

    <string name="title_maps">Maps</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="todo">TODO</string>


    <!--Update kos activity-->
    <string name="desc">Logo Update</string>
    <string name="input">Menginput Data</string>
    <string name="imgButtonUpdate">Image Button></string>
    <string name="checkBoxUpdate">Check Box</string>
    <string name="imgViewUpdate">Image View</string>
    <string name="textViewUpdate">Text View</string>
    <!--image update activity-->
    <string name="tvImg">ini TV</string>
    <string name="acImg">ini AC</string>
    <string name="wifiImg">ini Wifi</string>
    <string name="bathroomImg">ini Bathroom</string>
    <string name="almariImg">ini Lemari</string>
    <string name="areaImg">ini Area Parkir</string>
    <!--text update kos activity-->
    <string name="namakos">Nama Kos</string>
    <string name="alamatkos">Alamat Kos</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="tv">TV</string>
    <string name="wifi">Wifi</string>
    <string name="almari">Lemari</string>
    <string name="ac">AC</string>
    <string name="bathroom">Bathroom</string>
    <string name="areaparking">Area Parkir</string>
    <string name="biaya">Biaya</string>
    <string name="perbulan">/bulan</string>
    <string name="catatan">Catatan</string>
</resources>
