<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<ScrollView    
    xmlns:android="http://schemas.android.com/apk/res/android"
=======
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 2e4e888be48d8c5a9f8f59aab78498658519feb4
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:fillViewport="true"
    tools:context="com.example.erlangga.anakosapp.UpdateKosDetail">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <ImageView
        android:id="@+id/logoUpdate"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/desc"
        android:elevation="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:hint="@string/namakos"
            android:contentDescription="@string/input"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="30dp"
            android:hint="@string/alamatkos"
            android:contentDescription="@string/input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fasilitas"
            android:contentDescription="@string/textViewUpdate"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/checkBoxUpdate"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/tv"
                android:contentDescription="@string/tvImg"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tv"
                android:contentDescription="@string/textViewUpdate"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="86dp"
                android:contentDescription="@string/checkBoxUpdate"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ac"
                android:contentDescription="@string/acImg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ac"
                android:contentDescription="@string/textViewUpdate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/checkBoxUpdate"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/wifi"
                android:contentDescription="@string/wifiImg"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/wifi"
                android:contentDescription="@string/textViewUpdate"/>

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="74dp"
                android:contentDescription="@string/checkBoxUpdate"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bathroom"
                android:contentDescription="@string/almariImg"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/bathroom"
                android:contentDescription="@string/textViewUpdate"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/checkBoxUpdate"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/almari"
                android:contentDescription="@string/almariImg"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/almari" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/parkirarea"
                android:contentDescription="@string/areaImg"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/textViewUpdate" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="30dp"
            android:hint="@string/biaya" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="10dp"
            android:hint="@string/perbulan" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="10dp"
            android:hint="@string/catatan" />
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            android:background="@drawable/add_btn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Simpan"
            android:elevation="4dp"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

</RelativeLayout>
</ScrollView>
=======
    tools:context="com.example.erlangga.anakosapp.UpdateKosDetail">

    <EditText
        android:id="@+id/namaKosPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nama Kos"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/genderKos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/namaKosPost"
        android:layout_alignStart="@+id/namaKosPost"
        android:layout_below="@+id/namaKosPost"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Laki-Laki/Perempuan" />
</RelativeLayout>
>>>>>>> 2e4e888be48d8c5a9f8f59aab78498658519feb4
